# ChronoMiner

./: .gitignore  README.md  RELEASE_NOTES_v2.0.md  RELEASE_NOTES_v3.0.md  RELEASE_NOTES_v4.0.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.windsurf/workflows/: test-chronominer.md
additional_context/: BibliographicEntries.txt  BrazilianMilitaryRecords.txt  CulinaryEntitiesEntries.txt  CulinaryPersonsEntries.txt  CulinaryPlacesEntries.txt  CulinaryWorksEntries.txt  HistoricalAddressBookEntries.txt  HistoricalRecipesEntries.txt  StructuredSummaries.txt
basic_context/: BibliographicEntries.txt  CulinaryEntitiesEntries.txt  CulinaryPersonsEntries.txt  CulinaryPlacesEntries.txt  CulinaryWorksEntries.txt  HistoricalAddressBookEntries.txt  HistoricalRecipesEntries.txt  HistoricalRecipesEntriesLight.txt  HistoricalRecipesEntriesMinimal.txt  HistoricalRecipesSemanticAdditions.txt  MilitaryRecordEntries.txt  StructuredSummaries.txt
config/: api_keys_config.yaml  chunking_and_context.example.yaml  chunking_and_context.yaml  chunking_config.yaml  concurrency_config.example.yaml  concurrency_config.yaml  image_processing_config.example.yaml  image_processing_config.yaml  model_config.example.yaml  model_config.yaml  paths_config.example.yaml  paths_config.yaml
context/extraction/: HistoricalRecipesEntries.txt  HistoricalRecipesEntriesLight.txt  MilitaryRecordEntries.txt
context/line_ranges/: BibliographicEntries.txt
developer_messages/: BibliographicEntries.txt  BrazilianMilitaryRecords.txt  HistoricalAddressBookEntries.txt  StructuredSummaries.txt
docs/: chronominer_daily_runs.md  handoff_resume_skip_partial_pdf_05_06_2026.md
eval/: README.md  convert_ra_ground_truth.py  eval_config.yaml  extraction_eval.ipynb  jsonl_eval.py  metrics.py  prepare_ground_truth.py
eval/reports/: eval_results_20260406_180434.csv  table_6_extraction_f1.md
evaluation/extraction_eval/: README.md
example_files/: example_files.txt
fine_tuning/: __init__.py  annotation_txt.py  annotations_jsonl.py  chunk_input.py  cli.py  extractor.py  jsonl_io.py  paths.py  prompt_builder.py  schema.py  sft_dataset.py  validation.py
gimmicks/: additional_context_prompt.txt  basic_context_prompt.txt  extraction_context_prompt.txt  line_ranges_context_prompt.txt
main/: bootstrap.py  cancel_batches.py  check_batches.py  cli_args.py  cost_analysis.py  dual_mode.py  generate_line_ranges.py  line_range_readjuster.py  mode_detector.py  prepare_extraction_ground_truth.py  process_text_files.py  repair_extractions.py  slim_temp_jsonl.py
modules/: __init__.py  batch_utils.py  batching.py  concurrency.py  config_loader.py  config_manager.py  context_manager.py  data_processing.py  file_processor.py  logger.py  model_capabilities.py  openai_sdk_utils.py  openai_utils.py  prompt_utils.py  schema_handlers.py  schema_manager.py  structured_outputs.py  text_processing.py  text_utils.py  user_interface.py
modules/batch/: __init__.py  diagnostics.py  ops.py
modules/cli/: __init__.py  args_parser.py  execution_framework.py  mode_detector.py
modules/config/: __init__.py  constants.py  context.py  loader.py  manager.py  schema_manager.py
modules/conversion/: __init__.py  base.py  csv_converter.py  document_converter.py  json_utils.py
modules/ui/: core.py  (+5 more)
prompts/: image_extraction_prompt.txt  semantic_boundary_prompt.txt  structured_output_prompt.txt  text_extraction_prompt.txt
schemas/: address_schema.json  bibliographic_schema.json  cookbook_metadata_schema.json  culinary_entities.json  culinary_persons.json  culinary_places.json  culinary_works_schema.json  historical_price_entries_schema.json  historical_recipes_schema.json  historical_recipes_schema_full.json  historical_recipes_schema_light.json  historical_recipes_schema_minimal.json  historical_recipes_schema_production.json  historical_recipes_schema_semantic_additions.json  inequality_benchmarks_schema.json  michelin_guides.json  michelin_guides_light.json  military_record_schema.json  summary_schema.json  wikipedia_chef_schema.json  wikipedia_restaurant_schema.json
tests/: README.md  VERIFICATION_v5.0.md  conftest.py  test_args_parser.py  test_batch_backends.py  test_batch_ops.py  test_batch_output_merge.py  test_batch_output_unification.py  test_batch_reliability_fixes.py  test_batch_utils.py  test_batching.py  test_check_batches_finalization.py  test_chunk_slice.py  test_chunking_service.py  test_cli_integration.py  test_cm_fixes.py  test_concurrency.py  test_config_extended.py  test_config_loader.py  test_config_manager.py  test_constants.py  test_context_image.py  test_context_manager.py  test_context_resolver.py  test_conversion_interface.py  test_converters_extended.py  test_cost_analysis.py  test_coverage_extension.py  test_durability_fixes.py  test_execution_framework.py  test_file_processor_images.py  test_file_processor_offline.py  test_generate_line_ranges.py  test_hardening_tier1.py  test_hardening_tier2.py  test_image_message_builder.py  test_image_utils.py  test_images_pipeline.py  test_input_type_detection.py  test_interactive_fixes.py  (+37 more)
(+278 files in other folders)
