[project]
name = "chronominer"
version = "1.0.1"
description = "Structured data extraction from text, images, and PDFs using schema-based LLM processing"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"

dependencies = [
    "anthropic>=0.94",
    "colorama>=0.4.6",
    "google-genai>=1.73",
    "langchain-anthropic>=1.4",
    "langchain-core>=1.2",
    "langchain-google-genai>=4.2",
    "langchain-openai>=1.1",
    "openai>=2.31",
    "pandas>=3.0",
    "Pillow>=12.0",
    "pip==26.0.1",
    "PyMuPDF>=1.27",
    "python-docx>=1.2",
    "PyYAML>=6.0",
    "tiktoken>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.0",
    "coverage>=7.13",
    "mypy>=1.20",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["main", "modules"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
