[project]
name = "chronominer"
version = "2.5.0"
description = "Structured data extraction from text, images, and PDFs using schema-based LLM processing"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"

dependencies = [
    "anthropic>=0.117",
    "charset-normalizer>=3.4",
    "colorama>=0.4.6",
    "google-genai>=2.12",
    "langchain-anthropic>=1.4.8",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langchain-openai>=1.3.5",
    "openai>=2.46",
    "pandas>=3.0",
    "Pillow>=12.3",
    "PyMuPDF>=1.28",
    "python-docx>=1.2",
    "PyYAML>=6.0",
    "tiktoken>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1",
    "pytest-asyncio>=1.4",
    "pytest-cov>=7.1",
    "coverage>=7.15",
    "mypy>=2.3",
    "ruff>=0.15.22",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["main", "modules"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"
extend-include = ["*.ipynb"]
extend-exclude = ["data/", "outputs/", "scratch", ".claude", "backup", "deprecated", "exploratory", "explorative", "extras"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"main/cancel_batches.py" = ["E402"]
"main/check_batches.py" = ["E402"]
"main/generate_line_ranges.py" = ["E402"]
"main/line_range_readjuster.py" = ["E402"]
"main/process_text_files.py" = ["E402"]
"main/repair_extractions.py" = ["E402"]
"main/slim_temp_jsonl.py" = ["E402"]
"eval/*.py" = ["E402"]
"eval/*.ipynb" = ["E402"]
"tests/test_remaining_extensions.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = false

[tool.deptry]
# Treat the dev extra as development dependencies (CLI tools and plugins
# such as pytest, mypy, and ruff are not imported in the source tree).
pep621_dev_dependency_groups = ["dev"]
# eval/ and tests/ carry their own analysis-only imports (matplotlib,
# IPython, local eval helpers) that are intentionally undeclared.
extend_exclude = ["eval", "tests"]

[tool.deptry.package_module_name_map]
# Distributions whose import name differs from the package name; declaring
# these keeps scans accurate even when deptry runs outside the project venv.
google-genai = ["google"]
PyYAML = ["yaml"]
python-docx = ["docx"]
Pillow = ["PIL"]
PyMuPDF = ["fitz"]
